# XDL_industrial_AI

./: .env  .gitignore  LICENSE  README.md  config.py  main.py  main_api.py  main_client.py  pyproject.toml
DB/: connect.py  crud.py  migrate.py
DB/DBmodel/: dataTB.py
MLmodels/: DLM.py  run_longExp.py  run_stat.py
MLmodels/data_provider/: data_factory.py  data_loader.py  data_loader_v2.py
MLmodels/expBase/: exp_main.py
MLmodels/pred_results/test_DLinear_ETTh1_ftM_sl336_pl96_ebtimeF_Exp/: real_prediction.csv  real_prediction.npy
api/: service.py
api/model/: dataclass.py
api/router/: DLms.py  Fstream.py  conWS.py
api/templates/: DLms_home.html  index_Fstream.html  index_dlm.html  index_root.html
client/: app.py
client/uiform/: form.ui  form2.ui  test.ui
pred_req_test_data/: test_pred_all.csv  test_pred_input.csv  test_pred_real.csv
