[tool.poetry]
name = "xdl-industrial-ai"
version = "0.1.0"
description = ""
authors = ["Augustine77 <hugwolf77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
애
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
